feat: add end-to-end testing scripts and images for user and site management
- Introduced new PowerShell scripts for end-to-end testing of member and site management functionalities.
- Added a new image for Chrome E2E user testing.
- Enhanced the testing framework to cover various scenarios including tenant registration, member invitations, and site management operations.